application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  labels:
    name: my-app
spec:
  ports:
  - port: 7000
    #type: NodePort
  selector:
    name: my-app
